// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading at level 1 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  variant="h1"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;

exports[`Heading at level 2 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  variant="h2"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;

exports[`Heading at level 3 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  variant="h3"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;

exports[`Heading at level 4 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  variant="h4"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;

exports[`Heading at level 5 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  variant="h5"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;

exports[`Heading at level 6 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  variant="h6"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;
